recursion.cons.lessons.recursion.cons.Length.scala.error
length:6: error: type mismatch;
 found   : Unit
 required: Int
		count = count + 1 
                      ^